第二次修改 抱歉刚才没注意

--- a/border set.html
+++ b/border set.html
@@ -22,7 +22,6 @@
 			right: 50%;
 			top: 20%;
 			transform: translate(-50%,-50%);
-
 		}
 /* H：Hue(色调)。0(或360)表示红色，120表示绿色，240表示蓝色，也可取其他数值来指定颜色。取值为：0 - 360
 
@@ -36,8 +35,9 @@ A：Alpha透明度。取值0~1之间 */
 </head>
 <body>
 	<div class="test">
-		<div class="trip"></div>
+		<div class="trip haa"></div>
 	</div>
 	<button>哈哈</button>
+
 </body>
 </html>
