--- a/border set.html
+++ b/border set.html
@@ -4,6 +4,7 @@
 	<title>盒模型之border的设置</title>
 	<meta charset="utf-8">
 	<style type="text/css">
+
 		.test{
 			background-color: purple;
 			width: 1000px;
@@ -34,6 +35,7 @@ A：Alpha透明度。取值0~1之间 */
 	</style>
 </head>
 <body>
+	<h2>欢迎来到主站</h2>
 	<div class="test">
 		<div class="trip haa"></div>
 	</div>
