--- a/border set.html
+++ b/border set.html
@@ -36,6 +36,7 @@ A：Alpha透明度。取值0~1之间 */
 </head>
 <body>
 	<h2>欢迎来到主站</h2>
+	<span>ww</span>
 	<div class="test">
 		<div class="trip haa"></div>
 	</div>
